[package]
name = "daytime_population"
version = "0.1.0"
edition = "2021"

[dependencies]
egui_dock = "0.15"
eframe = { version = "0.30", default-features = false, features = [
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
] }
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
log = "0.4"
thiserror = "1.0.64"
byteorder = "1.5.0"
once_cell = "1.20.2"
chrono = { version = "0.4.35", features = ["now"] }
image = { version = "0.25", features = ["png"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
